# wjsm

./: .aegis-checkpoint.json  .gitignore  .gitnexusignore  .plan.md  AGENTS.md  Cargo.toml  PROJECT_GUIDE.md  README.md  autoresearch.sh  bug.md  build.rs  fix-review  generate_registry.py  harness.js  out.wasm  report.md  skills-lock.json  test.ts  test_set.js  todo.md
crates/wjsm-backend-wasm/: Cargo.toml
crates/wjsm-backend-wasm/src/: analysis_liveness.rs  analysis_value_ty.rs  compiler_array_helpers.rs  compiler_builtins.rs  compiler_builtins_async_proxy.rs  compiler_builtins_collections.rs  compiler_builtins_core.rs  compiler_builtins_runtime.rs  compiler_builtins_string_math.rs  compiler_control.rs  compiler_core.rs  compiler_data.rs  compiler_gc_analysis.rs  compiler_helpers.rs  compiler_instructions.rs  compiler_module.rs  compiler_number_proto.rs  host_abi.rs  host_import_registry.rs  lib.rs  shared_types.rs  support_module.rs  support_object_helpers.rs
crates/wjsm-backend-wasm/src/compiler/: builtin.rs  cfg_analysis.rs  constant.rs  control_flow.rs  function.rs  helpers.rs  init.rs  instruction.rs  mod.rs  module.rs  runtime_helpers.rs  state.rs  utils.rs  value.rs  variable.rs
crates/wjsm-backend-wasm/src/compiler_control/: control_analysis.rs  control_branch.rs  control_locals.rs  control_structured.rs  control_switch.rs  mod.rs
crates/wjsm-backend-wasm/src/compiler_helpers/: barrier.rs  helpers_bounds.rs  helpers_object.rs  mod.rs
crates/wjsm-backend-wasm/src/compiler_instructions/: instr_calls.rs  instr_helpers.rs  instr_main.rs  instr_super.rs  mod.rs
crates/wjsm-backend-wasm/src/compiler_module/: mod.rs  module_bootstrap.rs  module_compile.rs  module_setup.rs
crates/wjsm-backend-wasm/src/host_import_registry/: mod.rs  specs_part1.rs  specs_part2.rs  specs_part3.rs  specs_part4.rs  specs_part5.rs  specs_part6.rs
crates/wjsm-backend-wasm/tests/: analysis_liveness.rs  async_switch_compile.rs  compiler_gc_analysis_spill.rs  gc_alloc_window.rs  host_import_registry.rs  integration.rs  primordial_strings.rs  shadow_stack_heap_guard.rs  shadow_stack_layout.rs  startup_bootstrap_exports.rs  var_slot_liveness_gc_long_loop.rs
crates/wjsm-backend-wasm/tests/integration/: analysis_liveness.rs  async_switch_compile.rs  compiler_gc_analysis_spill.rs  (+7 more)
crates/wjsm-cli/: Cargo.toml
crates/wjsm-cli/src/: cli_args.rs  cli_config.rs  cli_install.rs  cli_lint.rs  cli_scripts.rs  ir_output.rs  lib.rs  main.rs  runtime_loader.rs
crates/wjsm-gc-bench/: Cargo.toml
crates/wjsm-gc-bench/jdk-probe/: 0001-zgc-benchmark-counters.patch
crates/wjsm-gc-bench/src/: cli.rs  comparison.rs  gate.rs  jdk_probe.rs  jvm_driver.rs  lib.rs  main.rs  report.rs  resource.rs  resource_platform.rs  run.rs  runner.rs  scenario.rs  schema.rs  stats.rs  wjsm_driver.rs
crates/wjsm-gc-bench/tests/: contracts.rs
crates/wjsm-module/: Cargo.toml
crates/wjsm-module/builtin_js/: node_assert.js  node_async_hooks.js  node_child_process.js  node_cluster.js  node_crypto.js  node_dgram.js  node_events.js  node_fs.js  node_fs_promises.js  node_http.js  node_https.js  node_inspector.js  node_net.js  node_os.js  node_path.js  node_querystring.js  node_stream.js  node_tls.js  node_url.js  node_util.js  node_vm.js  node_worker_threads.js  node_zlib.js
crates/wjsm-module/src/: builtin_modules.rs  bundler.rs  cjs_require_analysis.rs  cjs_transform.rs  cjs_transform_tests.rs  exports.rs  graph.rs  lib.rs  module_format.rs  package_json.rs  resolution_options.rs  resolver.rs  resolver_tests.rs  runtime_resolution.rs  semantic.rs
crates/wjsm-runtime/: Cargo.toml
crates/wjsm-runtime-snapshot/: Cargo.toml  build.rs
crates/wjsm-runtime-snapshot/src/: lib.rs
crates/wjsm-runtime-snapshot/tests/: managed_heap_v2_artifact.rs
crates/wjsm-runtime-support/: Cargo.toml  build.rs
crates/wjsm-runtime-support/src/: abi.rs  lib.rs
crates/wjsm-runtime-support/tests/: embedded_support_cwasm.rs
crates/wjsm-runtime/benches/: gc_stress.rs
crates/wjsm-runtime/builtin_js/: manifest.rs
crates/wjsm-runtime/examples/: zgc_autoresearch.rs  zgc_barrier_pressure.rs
crates/wjsm-runtime/src/: agent_cluster.rs  array_named_props.rs  entry.rs  handle_remap.rs  host_side_table.rs  lib.rs  property_key.rs  realm.rs  realm_clone.rs  realm_clone_v2.rs  runtime_arguments.rs  runtime_async_fn.rs  runtime_bench.rs  runtime_buffer.rs  runtime_builtins.rs  runtime_collection_gc.rs  runtime_collections.rs  runtime_combinators.rs  runtime_date.rs  runtime_encoding.rs  runtime_engine_pool.rs  runtime_eval.rs  runtime_generator.rs  runtime_heap.rs  runtime_host_helpers.rs  runtime_json.rs  runtime_linker.rs  runtime_microtask.rs  runtime_module_loader.rs  runtime_module_registry.rs  runtime_node_async_hooks.rs  runtime_node_child_process.rs  runtime_node_crypto.rs  runtime_node_data.rs  runtime_node_dgram.rs  runtime_node_fs.rs  runtime_node_globals.rs  runtime_node_net.rs  runtime_node_perf_hooks_histogram.rs  runtime_node_tls.rs  (+25 more)
crates/wjsm-runtime/tests/: async_hooks_state.rs  async_reentry_audit.rs  async_scheduler.rs  embedded_startup_snapshot.rs  eval_realm_interp.rs  execution_realm_frame.rs  fetch_http_streaming.rs  g1_v2.rs  gc_barrier_protocol.rs  gc_concurrency_model.rs  gc_control_plane.rs  gc_footprint_long_run.rs  gc_host_roots_concurrent.rs  gc_loom_model.rs  gc_old_concurrent.rs  gc_pause_bench.rs  gc_protocol_miri.rs  gc_relocation_concurrent.rs  gc_telemetry.rs  gc_worker.rs  gc_young_concurrent.rs  handle_remap_kernel.rs  handle_table.rs  heap_access_v2.rs  heap_governance.rs  inspector_cdp.rs  integration.rs  managed_heap_memory.rs  mark_sweep_v2.rs  module_registry_loader_contract.rs  page_allocator.rs  realm_registry.rs  realm_side_tables_v2.rs  runtime_options_default.rs  shared_memory64_feasibility.rs  startup_snapshot.rs  startup_snapshot_gc_fixes.rs  timer_timing.rs  vm_gc_realm_roots.rs  zgc_v2.rs
crates/wjsm-test262/: Cargo.toml  build.rs
crates/wjsm-test262/src/: config.rs  exec.rs  main.rs  process.rs  read.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: lowering.rs  parser.rs  runtime.rs
(+2317 files in other folders)
