[package]
name = "wjsm"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/wjsm-parser",
    "crates/wjsm-semantic",
    "crates/wjsm-ir",
    "crates/wjsm-backend-wasm",
    "crates/wjsm-backend-jit",
    "crates/wjsm-runtime",
    "crates/wjsm-cli",
    "crates/wjsm-test262",
    "crates/wjsm-module",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
swc_core = { version = "62.0.0", features = ["ecma_parser", "ecma_ast", "common"] }
thiserror = "2.0.18"
wasm-encoder = "0.246.2"
wasmtime = "43.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
walkdir = "2"
comfy-table = "7"
colored = "2"
regress = "0.11"

[dependencies]
anyhow = { workspace = true }
wjsm-cli = { path = "crates/wjsm-cli" }

[dev-dependencies]
anyhow = { workspace = true }
