[package]
name = "wjsm"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/wjsm-parser",
    "crates/wjsm-semantic",
    "crates/wjsm-ir",
    "crates/wjsm-backend-wasm",
    "crates/wjsm-backend-jit",
    "crates/wjsm-runtime",
    "crates/wjsm-cli",
    "crates/wjsm-test262",
    "crates/wjsm-module",
    "crates/wjsm-runtime-snapshot",
    "crates/wjsm-runtime-support",
    "crates/wjsm-snapshot-format",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.0"
swc_core = { version = "62.0.0", features = ["ecma_parser", "ecma_ast", "common", "ecma_visit", "ecma_ast_serde", "ecma_codegen"] }
thiserror = "2.0.18"
wasm-encoder = "0.246.2"
wasmtime = { version = "43.0.0", features = ["async", "winch", "debug"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "macros", "net", "io-util", "process"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["handshake", "connect"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
rayon = "1.10"
walkdir = "2"
comfy-table = "7"
colored = "2"
notify = "8.0"
wasmprinter = "0.245"
wasmparser = "0.246"
sha2 = "0.10"
regress = "0.11"
regex = "1"
toml = "0.9.12"
reqwest = { version = "0.12", features = ["rustls-tls", "stream"] }
proptest = "1.9.0"
url = "2"
encoding_rs = "0.8"
get_if_addrs = "0.5.3"
sysinfo = "0.39.5"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
webpki-roots = "0.26"

flate2 = "1"
brotli = "8"
tar = "0.4"
wait-timeout = "0.2"
[dependencies]
anyhow = { workspace = true }
wjsm-cli = { path = "crates/wjsm-cli" }

[dev-dependencies]
anyhow = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true }
wjsm-runtime = { path = "crates/wjsm-runtime" }

[[test]]
name = "gc_footprint_long_run"
path = "crates/wjsm-runtime/tests/gc_footprint_long_run.rs"
# 仅对 wasmtime/cranelift 这类编译密集型依赖启用优化，
# 保持本仓库自身 crate 仍走快速 debug 编译。
# 测试时每个 fixture 都会用 Cranelift 把 WASM 编译成本机码，
# 未优化的 Cranelift 是 fixture 执行 ~290ms 开销的主因。
[profile.dev.package.cranelift-codegen]
opt-level = 3
[profile.dev.package.wasmtime-internal-cranelift]
opt-level = 3
[profile.dev.package.cranelift-frontend]
opt-level = 3
[profile.dev.package.cranelift-codegen-meta]
opt-level = 3
[profile.dev.package.cranelift-assembler-x64]
opt-level = 3
[profile.dev.package.wasmtime-internal-core]
opt-level = 3
[profile.dev.package.wasmtime-environ]
opt-level = 3
[profile.dev.package.wjsm-runtime]
opt-level = 3
# memchr 的 SIMD 子串搜索（find_memory_c_string 用）在未优化 debug 下
# 带大量 UB 检查 + 未内联，实测占 bootstrap ~35% 指令；opt 后大幅收缩。
[profile.dev.package.memchr]
opt-level = 3
# 测试 profile：保留行号表（debug=1），并复制 dev 的关键 package opt-level
# （Cargo 不继承 package-specific 设置）。
[profile.test]
debug = 1

[profile.test.package.cranelift-codegen]
opt-level = 3
[profile.test.package.wasmtime-internal-cranelift]
opt-level = 3
[profile.test.package.cranelift-frontend]
opt-level = 3
[profile.test.package.cranelift-codegen-meta]
opt-level = 3
[profile.test.package.cranelift-assembler-x64]
opt-level = 3
[profile.test.package.wasmtime-internal-core]
opt-level = 3
[profile.test.package.wasmtime-environ]
opt-level = 3
[profile.test.package.wjsm-runtime]
opt-level = 3
[profile.test.package.memchr]
opt-level = 3
[profile.test.package.wasmtime]
opt-level = 3
[profile.test.package.wasmtime-internal-winch]
opt-level = 3
[profile.test.package.winch-codegen]
opt-level = 3
[profile.test.package.wjsm-cli]
opt-level = 3
[profile.test.package.wjsm-module]
opt-level = 3
[profile.test.package.wjsm-backend-wasm]
opt-level = 3
# dev 同样补上 wasmtime 本体
[profile.dev.package.wasmtime]
opt-level = 3
[profile.dev.package.wasmtime-internal-winch]
opt-level = 3
[profile.dev.package.winch-codegen]
opt-level = 3