[package]
name = "wjsm-backend-wasm"
version.workspace = true
edition.workspace = true

[features]
managed-heap-v2 = []

[dependencies]
anyhow = { workspace = true }
swc_core = { workspace = true }
wasm-encoder = { workspace = true }
wjsm-ir = { path = "../wjsm-ir" }

[dev-dependencies]
wasmprinter = { workspace = true }
wasmparser = { workspace = true }
wasmtime = { workspace = true }
wjsm-parser = { path = "../wjsm-parser" }
wjsm-semantic = { path = "../wjsm-semantic" }