[package]
name = "wjsm-cli"
version.workspace = true
edition.workspace = true

[features]
default = []

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
wjsm-backend-jit = { path = "../wjsm-backend-jit" }
wjsm-backend-wasm = { path = "../wjsm-backend-wasm" }
wjsm-ir = { path = "../wjsm-ir" }
wjsm-parser = { path = "../wjsm-parser" }
wjsm-runtime = { path = "../wjsm-runtime" }
wjsm-runtime-snapshot = { path = "../wjsm-runtime-snapshot" }
wjsm-runtime-support = { path = "../wjsm-runtime-support" }
wjsm-semantic = { path = "../wjsm-semantic" }
wjsm-module = { path = "../wjsm-module" }
colored = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
wasmprinter = { workspace = true }
wasmparser = { workspace = true }
sha2 = { workspace = true }
notify = { workspace = true }
swc_core = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
regex = "1"
walkdir = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
flate2 = { workspace = true }
tar = { workspace = true }
