[package]
name = "wjsm-gc-bench"
version.workspace = true
edition.workspace = true

[[bin]]
name = "wjsm-gc-bench"
path = "src/main.rs"

[[test]]
name = "contracts"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true }
wjsm-runtime = { path = "../wjsm-runtime" }
