[package]
name = "wjsm-runtime-snapshot"
version.workspace = true
edition.workspace = true

[features]
default = ["embedded"]
embedded = []
managed-heap-v2 = []

[dependencies]

[build-dependencies]
wjsm-runtime = { path = "../wjsm-runtime" }
wjsm-backend-wasm = { path = "../wjsm-backend-wasm" }
wjsm-engine-config = { path = "../wjsm-engine-config" }
wjsm-runtime-support = { path = "../wjsm-runtime-support" }
wjsm-snapshot-format = { path = "../wjsm-snapshot-format" }
anyhow = { workspace = true }

[dev-dependencies]
wjsm-engine-config = { path = "../wjsm-engine-config" }
wjsm-runtime-support = { path = "../wjsm-runtime-support" }
wjsm-snapshot-format = { path = "../wjsm-snapshot-format" }
