[package]
name = "wjsm-runtime-support"
version.workspace = true
edition.workspace = true

[features]
default = ["embedded"]
embedded = []
managed-heap-v2 = ["wjsm-backend-wasm/managed-heap-v2"]

[dependencies]

[build-dependencies]
anyhow = { workspace = true }
wasmtime = { workspace = true }
wjsm-engine-config = { path = "../wjsm-engine-config" }
wjsm-backend-wasm = { path = "../wjsm-backend-wasm" }
wasmparser = { workspace = true }

[dev-dependencies]
wasmtime = { workspace = true }
wjsm-engine-config = { path = "../wjsm-engine-config" }
wjsm-backend-wasm = { path = "../wjsm-backend-wasm" }
