[package]
name = "wjsm-runtime"
version.workspace = true
edition.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }


[dependencies]
anyhow = { workspace = true }
wasmtime = { workspace = true }
tokio = { workspace = true }
wjsm-ir = { path = "../wjsm-ir" }
wjsm-snapshot-format = { path = "../wjsm-snapshot-format" }
wjsm-runtime-support = { path = "../wjsm-runtime-support" }
num-bigint = { version = "0.4", features = ["std"] }
num-traits = { version = "0.2" }
rand = { version = "0.8" }
chrono = { version = "0.4", features = ["wasmbind"] }
regress = { workspace = true }
swc_core = { workspace = true }
wjsm-backend-wasm = { path = "../wjsm-backend-wasm" }
wjsm-parser = { path = "../wjsm-parser" }
wjsm-semantic = { path = "../wjsm-semantic" }
reqwest = { workspace = true }
base64 = "0.22"
memchr = "2"
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
