[package]
name = "wjsm-runtime"
version.workspace = true
edition.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }


[dependencies]
anyhow = { workspace = true }
wasmtime = { workspace = true }
tokio = { workspace = true }
wjsm-ir = { path = "../wjsm-ir" }
wjsm-snapshot-format = { path = "../wjsm-snapshot-format" }
wjsm-runtime-support = { path = "../wjsm-runtime-support" }
num-bigint = { version = "0.4", features = ["std"] }
num-traits = { version = "0.2" }
rand = { version = "0.8" }
chrono = { version = "0.4", features = ["wasmbind"] }
regress = { workspace = true }
flate2 = { workspace = true }
brotli = { workspace = true }
wait-timeout = { workspace = true }
swc_core = { workspace = true }
wjsm-backend-wasm = { path = "../wjsm-backend-wasm" }
wjsm-parser = { path = "../wjsm-parser" }
wjsm-semantic = { path = "../wjsm-semantic" }
reqwest = { workspace = true }
base64 = "0.22"
encoding_rs = { workspace = true }
memchr = "2"
icu_normalizer = { version = "2.2", features = ["compiled_data"] }
sysinfo = { workspace = true }
get_if_addrs = { workspace = true }
digest = "0.10"
hmac = "0.12"
libc = "0.2"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }
webpki-roots = { workspace = true }
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "gc_stress"
harness = false
