[package]
name = "wjsm-test262"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = "0.9"
serde_json = { workspace = true }
walkdir = "2"
comfy-table = "7"
rayon = "1.10"
colored = "2"
